# satctl

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  requirements.txt
plans/: ARCHITECTURE.md
satctl/: __init__.py  __main__.py  cli.py  config.py
satctl/app/: anomaly_service.py  cli_sync_service.py  sync_service.py  traffic_service.py
satctl/data/: __init__.py  models.py  pipeline.py
satctl/data/providers/: base.py  celestrak_provider.py  satcat_provider.py  ucs_provider.py
satctl/database/: __init__.py  models.py  repository.py  schema.py
satctl/domain/: models.py
satctl/domain/anomalies/: anomaly_engine.py
satctl/domain/catalog/: catalog_engine.py
satctl/domain/signals/: signals_engine.py
satctl/normalization/: __init__.py  models.py
satctl/propagation/: __init__.py  models.py  sgp4_engine.py  skyfield_engine.py  utils.py
satctl/providers/: __init__.py  base.py  celestrak.py  satcat.py  satnogs.py  satnogs_observations.py  satnogs_transmitters.py  ucs.py
satctl/region/: __init__.py  detector.py  region.py
satctl/storage/: db.py  models.py
satctl/storage/repos/: anomalies_repo.py  catalog_events_repo.py  observations_repo.py  satellites_repo.py  sources_repo.py  tle_repo.py  transmitters_repo.py
satctl/sync/: __init__.py  celestrak.py  tle_parser.py
satctl/tui/: __init__.py  app.py  style.css  widgets.py
satctl/utils/: __init__.py
tests/: __init__.py  test_cli_sync.py  test_cli_sync_service.py  test_database.py  test_propagation.py  test_tle_parser.py
